[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Enemies/Goomba_FSM.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Enemies/Goomba.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 4 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 4, 4 )

[node name="Goomba" type="KinematicBody2D"]
collision_layer = 128
collision_mask = 38
script = ExtResource( 3 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4, 4 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 4, 4 )
scale = Vector2( 0.0714286, 0.0714286 )
texture = ExtResource( 2 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 4, 4 )
shape = SubResource( 2 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 4, 4 )
shape = SubResource( 3 )

[node name="Jumpbox" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Jumpbox"]
position = Vector2( 4, -4 )
shape = SubResource( 4 )

[node name="LeftEdge" type="RayCast2D" parent="."]
position = Vector2( 0, 8 )
enabled = true
cast_to = Vector2( 0, 3 )
collision_mask = 4

[node name="RightEdge" type="RayCast2D" parent="."]
position = Vector2( 8, 8 )
enabled = true
cast_to = Vector2( 0, 3 )
collision_mask = 4

[connection signal="body_entered" from="Jumpbox" to="." method="_on_Jumpbox_body_entered"]
[connection signal="body_exited" from="Jumpbox" to="." method="_on_Jumpbox_body_exited"]
